Added media maxwidth 1366px

--- a/index.html
+++ b/index.html
@@ -135,10 +135,10 @@
 
             <!-- RIGHT SIDE -->
 
-            <div id="right-side" class="debug">
+            <div id="right-side" class="">
 
                 <!-- RIGHT HEADER -->
-                <header class="d-flex vertical-align f-end debug">
+                <header class="d-flex vertical-align f-end">
                     <div class="btn mrg-rgt25 txt-color-wt">
                         EFFETTUA L'UPGRADE
                     </div>
@@ -147,33 +147,37 @@
                 <section id="main-body" class="txt-color-wt">
 
                     <!-- RIGHT NAVBAR -->
-                    <nav class="navbar-right debug">
-                        <ul class="d-flex f-center gap25">
+                    <nav class="navbar-right">
+                        <ul class="padding-top d-flex f-center vertical-align sp-around gap25">
                             <li>
                                 IN EVIDENZA
+                                <div class="underline-colored"></div>
                             </li>
                             <li>
                                 PODCAST
+                                <div class="underline-colored"></div>
                             </li>
                             <li>
                                 CLASSIFICHE
+                                <div class="underline-colored"></div>
                             </li>
                             <li>
                                 GENERI E MOOD
+                                <div class="underline-colored"></div>
                             </li>
                             <li>
                                 NUOVE USCITE
+                                <div class="underline-colored"></div>
                             </li>
                             <li>
                                 SCOPRI
+                                <div class="underline-colored"></div>
                             </li>
                         </ul>
                     </nav>
 
-
-
                     <!-- RECENTLY PLAYED -->
-                    <section id="recently-played" class="padding-x">
+                    <section id="recently-played" class="padding-x padding-top">
                         <h2>
                             Recently played
                         </h2>
