Added media query 1024px/768px

--- a/index.html
+++ b/index.html
@@ -181,12 +181,12 @@
                         <h2>
                             Recently played
                         </h2>
-                        <div class="d-flex gap25">
+                        <div class="recently-played d-flex">
                             <div class="card">
                                 <div class="song-img">
                                     <img src="img/metal_lifting.jpg" alt="Heavy Metal">
                                 </div>
-                                <div class="txt-center">
+                                <div class="undercard txt-center">
                                     <h3 style="padding-top: 10px;">
                                         Heavy Metal
                                     </h3>
@@ -199,9 +199,9 @@
                                 <div class="song-img">
                                     <img src="img/stranger.jpeg" alt="Stranger things">
                                 </div>
-                                <div class="txt-center">
+                                <div class="undercard txt-center">
                                     <h3 style="padding-top: 10px;">
-                                        Stranger Things, Vol. 1 (a Netflix OriginaSeries Soundtrack)
+                                        Stranger Things, Vol. 1 (a Netflix Original Series Soundtrack)
                                     </h3>
                                     <p class="subtitle">
                                         Subtitle
@@ -212,7 +212,7 @@
                                 <div class="song-img">
                                     <img src="img/aquietplace.jpeg" alt="A quiet place">
                                 </div>
-                                <div class="txt-center">
+                                <div class="undercard txt-center">
                                     <h3 style="padding-top: 10px;">
                                         A quiet place
                                     </h3>
@@ -225,7 +225,7 @@
                                 <div class="song-img">
                                     <img src="img/split.jpeg" alt="Split">
                                 </div>
-                                <div class="txt-center">
+                                <div class="undercard txt-center">
                                     <h3 style="padding-top: 10px;">
                                         Split
                                     </h3>
@@ -238,7 +238,7 @@
                                 <div class="song-img">
                                     <img src="img/cure.jpeg" alt="A cure for wellness">
                                 </div>
-                                <div class="txt-center">
+                                <div class="undercard txt-center">
                                     <h3 style="padding-top: 10px;">
                                         A cure for wellness
                                     </h3>
@@ -251,7 +251,7 @@
                                 <div class="song-img">
                                     <img src="img/sinister.jpeg" alt="Sinister">
                                 </div>
-                                <div class="txt-center">
+                                <div class="undercard txt-center">
                                     <h3 style="padding-top: 10px;">
                                         Sinister
                                     </h3>
@@ -264,7 +264,7 @@
                     </section>
 
                     <!-- CREATO PER TE -->
-                    <section id="creato-per-te" class="padding-x">
+                    <section id="creato-per-te" class="padding-x padding-top">
                         <h2>
                             Recently played
                         </h2>
@@ -298,7 +298,7 @@
                     </section>
 
                     <!-- ARTISTI PIU' ASCOLTATI -->
-                    <section id="most-listened" class="padding-x">
+                    <section id="most-listened" class="padding-x padding-top">
                         <h2>
                             Artisti piu' popolari
                         </h2>
