Added media query 425 px

--- a/index.html
+++ b/index.html
@@ -131,6 +131,32 @@
                 </footer>
             </div>
 
+            <div id="left-side-plus" class="d-flex column sp-between f-center">
+                <div>
+                    <div class="laterl-bar-plus">
+                        <img src="img/logo-small.svg" alt="">
+                    </div>
+                    <div class="laterl-bar-plus">
+                        <img src="img/home.svg" alt="Home">
+                    </div>
+                    <div class="laterl-bar-plus">
+                        <img src="img/search.svg" alt="">
+                    </div>
+                    <div class="laterl-bar-plus">
+                        <img src="img/libreria.svg" alt="">
+                    </div>
+                </div>
+
+                <div>
+                    <div class="laterl-bar-plus">
+                        <img src="img/download.svg" alt="">
+                    </div>
+                    <div class="laterl-bar-plus">
+                        <img src="img/profile.svg" alt="">
+                    </div>
+                </div>
+            </div>
+
 
 
             <!-- RIGHT SIDE -->
