Main structure finished

--- a/index.html
+++ b/index.html
@@ -131,7 +131,7 @@
                 </footer>
             </div>
 
-            <div id="left-side-plus" class="d-flex column sp-between f-center">
+            <div id="left-side-plus">
                 <div>
                     <div class="laterl-bar-plus">
                         <img src="img/logo-small.svg" alt="">
@@ -148,11 +148,11 @@
                 </div>
 
                 <div>
-                    <div class="laterl-bar-plus">
+                    <div class="download">
                         <img src="img/download.svg" alt="">
                     </div>
                     <div class="laterl-bar-plus">
-                        <img src="img/profile.svg" alt="">
+                        <img class="profile" src="img/profile.svg" alt="">
                     </div>
                 </div>
             </div>
